	  One for the keyword type and one for the hard/profile mask:
	  http://sourceforge.net/tracker/?
	  func=detail&atid=710608&aid=2968195&group_id=128101
	- eix-remote/eix-layman: work around bug of newer layman or python
	  which misinterprets python -c ... as option -c for layman, see
	  http://bugs.gentoo.org/show_bug.cgi?id=309685
	- eix-remote/eix-layman: support >=python-3

*eix-0.20.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Move hosting to BerliOS as a protest on the influence of the
	  American Government against the freedom of projects on Sourceforge.
	- Support for BUILD_TIME (>=portage-2.2_rc63):
	  Introduce USE_BUILD_TIME and let it default to "true".
	- Quote in --dump and --dump-defaults: It is now guaranteed that the
	  output can be reread.
	- Fix segfault of <markedversions:*> without pipe argument, see
	  http://bugs.gentoo.org/show_bug.cgi?id=307479
	- Extend xml output by <licenses> and <provide>:
	  http://sourceforge.net/tracker/?
	  func=detail&aid=2965496&group_id=128101&atid=710611
	- Introduce eix-test-obsolete [no-]buildtime
	- Being unable to fix USE=nls on OS X,
	  http://bugs.gentoo.org/show_bug.cgi?id=305737
	  Thanks to Stuart Shelton <srcshelton at gmail.com> for testing.
	  If somebody has an idea, please write to that bug.

*eix-0.20.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix magic adding of -a / -o between successive tests
	  (regression introduced in 0.20.0).
	- Introduce NOFOUND_STATUS, MOREFOUND_STATUS to make eix -q useful:
	  http://bugs.gentoo.org/show_bug.cgi?id=304705
	  Best combined with:
	- Introduce --brief, --brief2 (mainly to make eix -q faster);
	  best combined with COUNT_ONLY_PRINTED=false
	- varsreader does no longer introduce accessed undefined variables:
	  There might be an advantage in speed and memory, but mainly it is
	  cleaner, avoiding e.g. http://bugs.gentoo.org/show_bug.cgi?id=299904
	- Minor compatibility fixes.

*eix-0.20.0